# satori

./: .gitattributes  .gitignore  pyproject.toml
satori/: satori.py  satoriCommon.py  satoriDHCP.py  satoriDNS.py  satoriHTTP.py  satoriNTP.py  satoriSMB.py  satoriSSH.py  satoriSSL.py  satoriTCP.py  smbHeader.py
satori/fingerprints/: ja3er.json
testdata/: Ultimate.pcap  dhcp_dyndns.pcap  dns_part1.pcap  nb6-startup.pcap
